crates/reinhardt-pages/tests/ui/component/fail/inline_loader.stderr
error: expected identifier
 --> tests/ui/component/fail/inline_loader.rs:3:54
  |
3 | #[component("/projects/", name = "project", loader = || async { Ok::<_, String>(1_u64) })]
  |                                                      ^

warning: unused imports: `Page` and `page`
 --> tests/ui/component/fail/inline_loader.rs:1:23
  |
1 | use reinhardt_pages::{Page, component, page};
  |                       ^^^^             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
